<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity">My Nanodegree Apps!</string>

    <string name="btn_title_spotify_streamer">SPOTIFY STREAMER</string>
    <string name="btn_title_scores">SCORES APP</string>
    <string name="btn_title_library">LIBRARY APP</string>
    <string name="btn_title_build_it">BUILD IT BIGGER</string>
    <string name="btn_title_xyz_reader">XYZ READER</string>
    <string name="btn_title_capstone">CAPSTONE: MY OWN APP</string>

    <string name="desc_spotify_streamer">This button will launch Spotify app!</string>
    <string name="desc_scores">This button will launch Scores app!</string>
    <string name="desc_library">This button will launch Library app!</string>
    <string name="desc_build_it">This button will launch Build It Bigger app!</string>
    <string name="desc_xyz_reader">This button will launch XYZ Reader app!</string>
    <string name="desc_capstone">This button will launch Capstone app!</string>

</resources>
