<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activity.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/title_activity"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnSpotyfi"
        style="@style/OrangeButton"
        android:layout_below="@+id/tvTitle"
        android:layout_marginTop="20dp"
        android:text="@string/btn_title_spotify_streamer" />

    <Button
        android:id="@+id/btnScoresApp"
        style="@style/OrangeButton"
        android:layout_below="@+id/btnSpotyfi"
        android:background="@color/color_orange"
        android:text="@string/btn_title_scores" />

    <Button
        android:id="@+id/btnLibrary"
        style="@style/OrangeButton"
        android:layout_below="@+id/btnScoresApp"
        android:text="@string/btn_title_library" />

    <Button
        android:id="@+id/btnBuildIt"
        style="@style/OrangeButton"
        android:layout_below="@+id/btnLibrary"
        android:text="@string/btn_title_build_it" />

    <Button
        android:id="@+id/btnXyzReader"
        style="@style/OrangeButton"
        android:layout_below="@+id/btnBuildIt"
        android:text="@string/btn_title_xyz_reader" />

    <Button
        android:id="@+id/btnCapstone"
        style="@style/OrangeButton"
        android:layout_below="@+id/btnXyzReader"
        android:background="@color/color_red"
        android:text="@string/btn_title_capstone" />


</RelativeLayout>
